--- a/TestWebApp/.settings/org.eclipse.wst.common.component
+++ b/TestWebApp/.settings/org.eclipse.wst.common.component
@@ -4,10 +4,10 @@
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
-        <dependent-module archiveName="webutils-services-1.0.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/Services/Services">
+        <dependent-module archiveName="webutils-services-1.0-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/Services/Services">
             <dependency-type>uses</dependency-type>
         </dependent-module>
-        <dependent-module archiveName="webutils-commons-1.0.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/Commons/Commons">
+        <dependent-module archiveName="webutils-commons-1.0-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/Commons/Commons">
             <dependency-type>uses</dependency-type>
         </dependent-module>
         <property name="context-root" value="TestWebApp"/>
